// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchFallback renders and matches snapshot (DE) 1`] = `
Object {
  "_locale": "de",
  "_width": 1200,
  "html": "
<div
  data-dmid=search-fallback-container
  className=searchFallbackContainer__1dsx585
>
  <h1 data-dmid=search-fallback-headline className=headline__12u4gl8>
    Ihre Suche nach „2ß9358ß239648” ergab leider keine Treffer
  </h1>
  <div data-dmid=search-fallback-suggestions className=suggestions__e925jf>
    Meinten Sie:{ }
    <a title=hello data-dmid=suggestion-link href=q=hello>
      hello
    </a>,{ }
    <a title=world data-dmid=suggestion-link href=q=world>
      world
    </a>?
  </div>
  <div
    data-dmid=search-fallback-info-container
    className=infoContainer__12ybgy7
  >
    <div
      data-dmid=search-fallback-info-container-content
      className=infoContainerContent__18pnl22
    >
      <div>content component 535460</div>
    </div>
    <div
      data-dmid=search-fallback-info-container-content
      className=infoContainerContent__18pnl22
    >
      <div>content component 535470</div>
    </div>
  </div>
</div>;
",
  "styles": "
.headline__12u4gl8 {
  -webkit-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  font-family: dmbrand-medium, Arial, Helvetica, sans-serif;
  font-size: 1.75rem;
  color: #002878;
  text-align: center;
  margin: 1.5625rem 0 2.5rem;
}
.infoContainer__12ybgy7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-lines: multiple;
  justify-content: space-around;
  -webkit-box-pack: justify;
  position: relative;
  margin-top: 0;
}
.infoContainerContent__18pnl22:first-of-type {
  padding-right: 2rem;
}
.infoContainerContent__18pnl22 {
  flex: 0 0 auto;
  width: 30%;
}
.suggestions__e925jf {
  font-size: 1.125rem;
  font-family: dmbrand-medium, Arial, Helvetica, sans-serif;
  margin-bottom: 2.5rem;
  text-align: center;
}
@media (max-width: 959px) {
  .infoContainerContent__18pnl22:first-of-type {
    padding-right: 0;
  }
  .infoContainerContent__18pnl22 {
    flex: 1 0 100%;
  }
  .searchFallbackContainer__1dsx585 {
    padding: 0 0.9375rem;
  }
}
",
}
`;

exports[`SearchFallback renders and matches snapshot (HU) 1`] = `
Object {
  "_locale": "de",
  "_width": 1200,
  "html": "
<div
  data-dmid=search-fallback-container
  className=searchFallbackContainer__1dsx585
>
  <h1 data-dmid=search-fallback-headline className=headline__12u4gl8>
    A(z) „2ß9358ß239648” keresése nem eredményezett találatot.
  </h1>
  <div
    data-dmid=search-fallback-info-container
    className=infoContainer__12ybgy7
  >
    <div
      data-dmid=search-fallback-info-container-content
      className=infoContainerContent__18pnl22
    >
      <div>content component 535460</div>
    </div>
    <div
      data-dmid=search-fallback-info-container-content
      className=infoContainerContent__18pnl22
    >
      <div>content component 535470</div>
    </div>
  </div>
</div>;
",
  "styles": "
.headline__12u4gl8 {
  -webkit-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  font-family: dmbrand-medium, Arial, Helvetica, sans-serif;
  font-size: 1.75rem;
  color: #002878;
  text-align: center;
  margin: 1.5625rem 0 2.5rem;
}
.infoContainer__12ybgy7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-lines: multiple;
  justify-content: space-around;
  -webkit-box-pack: justify;
  position: relative;
  margin-top: 0;
}
.infoContainerContent__18pnl22:first-of-type {
  padding-right: 2rem;
}
.infoContainerContent__18pnl22 {
  flex: 0 0 auto;
  width: 30%;
}
@media (max-width: 959px) {
  .infoContainerContent__18pnl22:first-of-type {
    padding-right: 0;
  }
  .infoContainerContent__18pnl22 {
    flex: 1 0 100%;
  }
  .searchFallbackContainer__1dsx585 {
    padding: 0 0.9375rem;
  }
}
",
}
`;
